objects/vlocity_cmt__Statement__c.object
<CustomObject>
    <description>Summaries from statements produced by a client&apos;s billing software can be imported into this object. Historical statements can be retained as well.</description>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Statements</relationshipLabel>
        <relationshipName>Statements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdditionalDiscount__c</fullName>
        <label>Additional Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BalanceDue__c</fullName>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrentBalance__c</fullName>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomerAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Statements</relationshipLabel>
        <relationshipName>CustomerStatements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PreviousBalance__c</fullName>
        <label>Previous Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServicesBilled__c</fullName>
        <label>Services Billed</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementAccountstatus__c</fullName>
        <label>Statement Account status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementDate__c</fullName>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementDetails__c</fullName>
        <label>Statement Details</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementImageURL__c</fullName>
        <label>Statement Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementPeriodEndDate__c</fullName>
        <label>Statement Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementPeriodStartDate__c</fullName>
        <label>Statement Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalBalanceDue__c</fullName>
        <formula>vlocity_cmt__BalanceDue__c  - (vlocity_cmt__BalanceDue__c  *  vlocity_cmt__AdditionalDiscount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Statement</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__CurrentBalance__c</columns>
        <columns>vlocity_cmt__BalanceDue__c</columns>
        <columns>vlocity_cmt__StatementDate__c</columns>
        <columns>vlocity_cmt__DueDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>